--- a/src/styles/tw.css
+++ b/src/styles/tw.css
@@ -6,10 +6,10 @@
     }
 }
 
-@theme static{
+@theme static {
+    --color-brand-100: #e6eef6;
     --color-brand-500: #002b5c;
     --color-brand-600: #01356f;
-    --color-brand-100: #e6eef6;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
@@ -24,7 +24,7 @@
 
     .card{
         @apply flex flex-col rounded-2xl border border-[var(--border)]
-        bg-[var(--surface)] shadow-[var(--shadow-1)] overflow-clip;
+        bg-[var(--surface)] overflow-clip;
     }
     .card__meta{
         @apply mt-auto flex items-center justify-between gap-4 p-4 border-t border-[var(--border)];
